ip6tables-restore
# Generated by ip6tables-save v1.6.1 on Tue Dec 24 07:31:45 2019
*filter
:INPUT ACCEPT [25:1928]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [41:3816]
:ufw6-after-forward - [0:0]
:ufw6-after-input - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-output - [0:0]
:ufw6-before-forward - [0:0]
:ufw6-before-input - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-output - [0:0]
:ufw6-reject-forward - [0:0]
:ufw6-reject-input - [0:0]
:ufw6-reject-output - [0:0]
:ufw6-track-forward - [0:0]
:ufw6-track-input - [0:0]
:ufw6-track-output - [0:0]
-A INPUT -i lxcbr0 -p tcp -m tcp --dport 53 -m comment --comment "generated for LXD network lxcbr0" -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 53 -m comment --comment "generated for LXD network lxcbr0" -j ACCEPT
-A INPUT -i lxcbr0 -p udp -m udp --dport 547 -m comment --comment "generated for LXD network lxcbr0" -j ACCEPT
-A INPUT -j ufw6-before-logging-input
-A INPUT -j ufw6-before-input
-A INPUT -j ufw6-after-input
-A INPUT -j ufw6-after-logging-input
-A INPUT -j ufw6-reject-input
-A INPUT -j ufw6-track-input
-A FORWARD -o lxcbr0 -m comment --comment "generated for LXD network lxcbr0" -j ACCEPT
-A FORWARD -i lxcbr0 -m comment --comment "generated for LXD network lxcbr0" -j ACCEPT
-A FORWARD -j ufw6-before-logging-forward
-A FORWARD -j ufw6-before-forward
-A FORWARD -j ufw6-after-forward
-A FORWARD -j ufw6-after-logging-forward
-A FORWARD -j ufw6-reject-forward
-A FORWARD -j ufw6-track-forward
-A OUTPUT -o lxcbr0 -p tcp -m tcp --sport 53 -m comment --comment "generated for LXD network lxcbr0" -j ACCEPT
-A OUTPUT -o lxcbr0 -p udp -m udp --sport 53 -m comment --comment "generated for LXD network lxcbr0" -j ACCEPT
-A OUTPUT -o lxcbr0 -p udp -m udp --sport 547 -m comment --comment "generated for LXD network lxcbr0" -j ACCEPT
-A OUTPUT -j ufw6-before-logging-output
-A OUTPUT -j ufw6-before-output
-A OUTPUT -j ufw6-after-output
-A OUTPUT -j ufw6-after-logging-output
-A OUTPUT -j ufw6-reject-output
-A OUTPUT -j ufw6-track-output
COMMIT
# Completed on Tue Dec 24 07:31:45 2019
# Generated by ip6tables-save v1.6.1 on Tue Dec 24 07:31:45 2019
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 2401:c080:1800:4ad6::101/128 -j DNAT --to-destination fd42:ad94:3088:bfc6:216:3eff:fe78:8031
-A PREROUTING -d fd42:ad94:3088:bfc6:216:3eff:fe0f:f385/128 -j DNAT --to-destination fd42:ad94:3088:bfc6:216:3eff:fedb:b928
-A POSTROUTING -s fd42:ad94:3088:bfc6::/64 ! -d fd42:ad94:3088:bfc6::/64 -m comment --comment "generated for LXD network lxcbr0" -j MASQUERADE
COMMIT
# Completed on Tue Dec 24 07:31:45 2019
